# teddy-hospital

./: .env.example  .gitignore  COPYING.md  FILESTRUCTURE.md  README.md  TODO.md  api.py  compose-prod.yaml  compose.yaml  config.py  config.toml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: .dockerignore  .gitignore  .tool-versions  README  README.md  config.py  config.toml  config.toml.example  main.py  pyproject.toml  requirements.txt
backend/docker/: Dockerfile-dev  Dockerfile-prod
backend/routes/: api.py  fracture_tool4.py  jobqueue.py
backend/scripts/: check_result.py  upload_image.py
backend/seafile/: __init__.py  exceptions.py  main.py  utils.py
backend/src/: app.py  worker.py
backend/storage/: storage.py
doc/: admin.rst  api.rst  conf.py  doctor.rst  index.rst  install.rst  structure.rst
frontend/: .env.example  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/docker/: Dockerfile-prod
frontend/src/: app.css
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte  Header.svelte
frontend/src/routes/about/: +page.svelte
frontend/src/routes/admin/: +page.svelte  +page.ts
frontend/src/routes/camera/: +page.svelte
frontend/src/routes/carousel/: +page.svelte
nginx/: Dockerfile
nginx/templates/: nginx.conf.template
routes/: api.py
seafile/: main.py
storage/: __init__.py  storage.py
tests/: conftest.py  endpoints_test.py  enpoints_test.py  job_queue_test.py  mock_ai.py  qr_test.py  queue_test.py  seafile_api_test.py  test_seafile.py  test_teddy_hospital.py
(+9 files in other folders)
